--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -20,10 +20,10 @@
 
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    <!-- Font table css -->
+    <!-- Font table css
     <link rel='stylesheet' href='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css'>
     <link rel='stylesheet' href='http://rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css'>
-
+  -->
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/all.css">
 
@@ -130,7 +130,7 @@
           </div>
 
                 <div id="table_icon" style="cursor: pointer;">
-                  <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" onclick="deleteOrderTableRow">&#xE872;</i></a>
+                  <a class="delete" title="Delete" data-toggle="tooltip" onclick="deleteOrderTableRow()"><i class="material-icons">&#xE872;</i></a>
                   <a class="add" title="Add" data-toggle="tooltip" href="user_rental_new.html"><i class="material-icons">&#xE03B;</i></a>
                 </div>
 
