--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -17,6 +17,10 @@
 
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
+    <!-- Font table css -->
+    <link rel='stylesheet' href='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css'>
+    <link rel='stylesheet' href='http://rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css'>
+
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/all.css">
 
@@ -139,75 +143,36 @@
                     <div class="row">
                       <label for="inputReason" style="padding-bottom: 12px" class="text-monospace">Fahrzeug</label>
                     </div>
-                    <div class="row">
-                      <div class="col">
-                        <label for="marke">Marke</label>
-                        <select id="marke" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="modell">Modell</label>
-                        <select id="modell" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="kraftstoff">Kraftstoff</label>
-                        <select id="kraftstoff" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                    </div>
-                      <p>
-                    <div class="row">
-                      <div class="col">
-                        <label for="schaltung">Schaltung</label>
-                        <select id="schaltung" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="tueren">Türen</label>
-                        <select id="tueren" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="klima">Klima</label>
-                        <select id="klima" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                    </div>
-                      <p>
-                    <div class="row">
-                      <div class="col">
-                        <label for="navigationsgeraet">Navigationsgerät</label>
-                        <select id="navigationsgeraet" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                        <div class="col">
-                          <label for="plaetze">Plätze</label>
-                          <select id="plaetze" class="form-control">
-                            <option selected>Auswählen</option>
-                          </select>
-                        </div>
-                      <div class="col">
-                        <label for="raucherwagen">Raucherwagen</label>
-                        <select id="raucherwagen" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                      <div class="col">
-                        <label for="stellplatznummer">Stellplatznummer</label>
-                        <select id="stellplatznummer" class="form-control">
-                          <option selected>Auswählen</option>
-                        </select>
-                      </div>
-                    </div>
+
+                    <div class="container">
+                    <div class="table-responsive-sm">
+                    <table id="order_table" class="order_table"
+                         data-toggle="table"
+                         data-filter-control="true"
+                         data-click-to-select="true"
+                         data-toolbar="#toolbar">
+                    <thead>
+                      <tr>
+                        <th data-field="state" data-checkbox="true"></th>
+                  			<th data-field="marke" data-sortable="true">Marke</th>
+                  			<th data-field="modell" data-sortable="true">Modell</th>
+                        <th data-field="kraftstoff" data-sortable="true">Kraftstoff</th>
+                  			<th data-field="schaltung" data-sortable="true">Schaltung</th>
+                        <th data-field="tueren" data-sortable="true">Türen</th>
+                        <th data-field="klima" data-sortable="true">Klima</th>
+                        <th data-field="navigationsgeraet" data-sortable="true">Navigationsgerät</th>
+                        <th data-field="plaetze" data-sortable="true">Plätze</th>
+                        <th data-field="raucherwagen" data-sortable="true">Raucherwagen</th>
+                        <th data-field="stellplatznummer" data-sortable="true">Stellplatznummer</th>
+                  		</tr>
+                  	</thead>
+                    	<tbody id="order_table_body">
+
+
+                     </tbody>
+                    </table>
                   </div>
+                </div>
                   <hr>
                     <div class="form-row">
                       <div class="form-group col-md-4">
@@ -217,8 +182,6 @@
                     </div>
                     <input class="btn btn-dark btn-lg btn-primary btn-block" type="button" onclick="addOrder()" value="Hinzufügen">
                 </form>
-
-
             </div>
 
         </div>
@@ -236,14 +199,25 @@
         $('#rueckgabedatum').datetimepicker({ footer: true, modal: true });
     </script>
 
+    <!-- Table JS -->
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/editable/bootstrap-table-editable.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/export/bootstrap-table-export.js'></script>
+    <script src='http://rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.js'></script>
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.9.1/extensions/filter-control/bootstrap-table-filter-control.js'></script>
+
+
     <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase.js"></script>
+
+    <!-- Awesome Font JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js" integrity="sha384-0pzryjIRos8mFBWMzSSZApWtPl/5++eIfzYmTgBBmXYdhvxPc+XcFEk+zJwDgWbP" crossorigin="anonymous"></script>
 
 
     <!-- Our Custom JS -->
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
-    <script src="js/get_car.js"></script>
+    <script src="js/get_order.js"></script>
     <script src="js/add_order.js"></script>
 
 
