--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -48,7 +48,7 @@
                           <a href="user_rental_overview.html">Übersicht</a>
                       </li>
                       <li>
-                          <a href="user_rental_new.html">Antrag erstellen</a>
+                          <a href="user_rental_new.html">Auftrag erstellen</a>
                       </li>
                   </ul>
               </li>
@@ -153,25 +153,101 @@
                          data-toolbar="#toolbar">
                     <thead>
                       <tr>
-                        <th data-field="state" data-checkbox="true"></th>
-                  			<th data-field="marke" data-sortable="true">Marke</th>
-                  			<th data-field="modell" data-sortable="true">Modell</th>
-                        <th data-field="kraftstoff" data-sortable="true">Kraftstoff</th>
-                  			<th data-field="schaltung" data-sortable="true">Schaltung</th>
-                        <th data-field="tueren" data-sortable="true">Türen</th>
-                        <th data-field="klima" data-sortable="true">Klima</th>
-                        <th data-field="navigationsgeraet" data-sortable="true">Navigationsgerät</th>
-                        <th data-field="plaetze" data-sortable="true">Plätze</th>
-                        <th data-field="raucherwagen" data-sortable="true">Raucherwagen</th>
-                        <th data-field="stellplatznummer" data-sortable="true">Stellplatznummer</th>
+                  			<th data-field="marke">Marke</th>
+                  			<th data-field="modell">Modell</th>
+                        <th data-field="kraftstoff">Kraftstoff</th>
+                  			<th data-field="schaltung">Schaltung</th>
+                        <th data-field="tueren">Türen</th>
+                        <th data-field="klima">Klima</th>
+                        <th data-field="navigationsgeraet">Navigationsgerät</th>
+                        <th data-field="plaetze">Plätze</th>
+                        <th data-field="raucherwagen">Raucherwagen</th>
+                        <th data-field="stellplatznummer">Stellplatznummer</th>
                   		</tr>
                   	</thead>
                     	<tbody id="order_table_body">
 
-
                      </tbody>
                     </table>
                   </div>
+                  <br>
+                  <div class="row">
+                     <div class="col">
+                       <label for="marke">Marke</label>
+                       <select id="marke" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="modell">Modell</label>
+                       <select id="modell" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="kraftstoff">Kraftstoff</label>
+                       <select id="kraftstoff" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                   </div>
+                     <p>
+                   <div class="row">
+                     <div class="col">
+                       <label for="schaltung">Schaltung</label>
+                       <select id="schaltung" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="tueren">Türen</label>
+                       <select id="tueren" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="klima">Klima</label>
+                       <select id="klima" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                   </div>
+                     <p>
+                   <div class="row">
+                     <div class="col">
+                       <label for="navigationsgeraet">Navigationsgerät</label>
+                       <select id="navigationsgeraet" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="plaetze">Plätze</label>
+                       <select id="plaetze" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                     <div class="col">
+                       <label for="raucherwagen">Raucherwagen</label>
+                       <select id="raucherwagen" class="form-control">
+                         <option selected>Auswählen</option>
+                       </select>
+                     </div>
+                   </div>
+                   <p>
+                     <div class="row">
+                       <div class="col">
+                         <label for="stellplatznummer">Stellplatznummer</label>
+                         <select id="stellplatznummer" class="form-control">
+                           <option selected>Auswählen</option>
+                         </select>
+                       </div>
+                       <div class="col">
+
+                       </div>
+                       <div class="col">
+
+                       </div>
+                   </div>
                 </div>
                   <hr>
                     <div class="form-row">
@@ -219,6 +295,7 @@
     <script src="js/login.js"></script>
     <script src="js/get_order.js"></script>
     <script src="js/add_order.js"></script>
+    <script src="js/get_car.js"></script>
 
 
 
