--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -133,7 +133,7 @@
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-car"></i></div>
                                   <input type="text" name="marke" class="form-control" id="marke"
-                                         placeholder="John Doe" required autofocus>
+                                         placeholder="BMW" required autofocus>
                               </div>
                           </div>
                       </div>
@@ -154,7 +154,7 @@
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
                                   <input type="text" name="modell" class="form-control" id="modell"
-                                         placeholder="you@example.com" required autofocus>
+                                         placeholder="1er" required autofocus>
                               </div>
                           </div>
                       </div>
@@ -175,7 +175,7 @@
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
                                   <input type="text" name="kraftstoff" class="form-control" id="kraftstoff"
-                                         placeholder="Password" required>
+                                         placeholder="Benzin" required>
                               </div>
                           </div>
                       </div>
@@ -198,7 +198,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="schaltung" class="form-control"
-                                         id="schaltung" placeholder="Password" required>
+                                         id="schaltung" placeholder="Automatik" required>
                               </div>
                           </div>
                       </div>
@@ -214,7 +214,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="tueren" class="form-control"
-                                         id="tueren" placeholder="Password" required>
+                                         id="tueren" placeholder="3 Türer" required>
                               </div>
                           </div>
                       </div>
@@ -230,7 +230,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="klima" class="form-control"
-                                         id="klima" placeholder="Password" required>
+                                         id="klima" placeholder="Klima" required>
                               </div>
                           </div>
                       </div>
@@ -246,7 +246,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="navigationsgeraet" class="form-control"
-                                         id="navigationsgeraet" placeholder="Password" required>
+                                         id="navigationsgeraet" placeholder="Navi" required>
                               </div>
                           </div>
                       </div>
@@ -262,7 +262,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="plaetze" class="form-control"
-                                         id="plaetze" placeholder="Password" required>
+                                         id="plaetze" placeholder="2-7" required>
                               </div>
                           </div>
                       </div>
@@ -278,7 +278,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="raucherwagen" class="form-control"
-                                         id="raucherwagen" placeholder="Password" required>
+                                         id="raucherwagen" placeholder="Raucherwagen" required>
                               </div>
                           </div>
                       </div>
@@ -294,7 +294,7 @@
                                       <i class="fa fa-redo"></i>
                                   </div>
                                   <input type="text" name="stellplatznummer" class="form-control"
-                                         id="stellplatznummer" placeholder="Password" required>
+                                         id="stellplatznummer" placeholder="1" required>
                               </div>
                           </div>
                       </div>
