--- a/web/admin_user_new.html
+++ b/web/admin_user_new.html
@@ -148,13 +148,13 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="email">E-Mail Address</label>
+                          <label for="emailneu">E-Mail Address</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
-                                  <input type="text" name="email" class="form-control" id="email" placeholder="you@example.com" required autofocus />
+                                  <input type="text" name="emailneu" class="form-control" id="emailneu" placeholder="you@example.com" required autofocus />
                               </div>
                           </div>
                       </div>
@@ -168,20 +168,20 @@
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="password">Password</label>
+                          <label for="passwordneu">Password</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group has-danger">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
-                                  <input type="password" name="password" class="form-control" id="password" placeholder="Password" required />
+                                  <input type="password" name="passwordneu" class="form-control" id="passwordneu" placeholder="Password" required />
                               </div>
                           </div>
                       </div>
                   </div>
                   <div class="row">
                       <div class="col-md-3 field-label-responsive">
-                          <label for="password">Confirm Password</label>
+                          <label for="passwordneu">Confirm Password</label>
                       </div>
                       <div class="col-md-6">
                           <div class="form-group">
@@ -189,8 +189,8 @@
                                   <div class="input-group-addon" style="width: 2.6rem">
                                       <i class="fa fa-redo"></i>
                                   </div>
-                                  <input type="password" name="password-confirmation" class="form-control"
-                                         id="password-confirm" placeholder="Password" required>
+                                  <input type="password" name="passwordneu-confirmation" class="form-control"
+                                         id="passwordneu-confirm" placeholder="Password" required>
                               </div>
                           </div>
                       </div>
