--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -20,10 +20,10 @@
 
     <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-    <!-- Font table css
+    <!-- Font table css   -->
     <link rel='stylesheet' href='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.0/bootstrap-table.min.css'>
     <link rel='stylesheet' href='http://rawgit.com/vitalets/x-editable/master/dist/bootstrap3-editable/css/bootstrap-editable.css'>
-  -->
+
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="css/all.css">
 
