--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -152,7 +152,7 @@
                       <div class="col-md-6">
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
-                                  <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
+                                  <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-cog"></i></div>
                                   <input type="text" name="modell" class="form-control" id="modell"
                                          placeholder="1er" required autofocus>
                               </div>
@@ -195,7 +195,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-redo"></i>
+                                      <i class="fa fa-gear"></i>
                                   </div>
                                   <input type="text" name="schaltung" class="form-control"
                                          id="schaltung" placeholder="Automatik" required>
@@ -211,7 +211,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-redo"></i>
+                                      <i class="fa fa-gear"></i>
                                   </div>
                                   <input type="text" name="tueren" class="form-control"
                                          id="tueren" placeholder="3 Türer" required>
@@ -227,7 +227,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-redo"></i>
+                                      <i class="fa fa-gear"></i>
                                   </div>
                                   <input type="text" name="klima" class="form-control"
                                          id="klima" placeholder="Klima" required>
@@ -243,7 +243,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-redo"></i>
+                                      <i class="fa fa-gear"></i>
                                   </div>
                                   <input type="text" name="navigationsgeraet" class="form-control"
                                          id="navigationsgeraet" placeholder="Navi" required>
