--- a/web/admin_carpool_new.html
+++ b/web/admin_carpool_new.html
@@ -243,7 +243,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-cog"></i>
+                                      <i class="fa fa-location-arrow"></i>
                                   </div>
                                   <input type="text" name="navigationsgeraet" class="form-control"
                                          id="navigationsgeraet" placeholder="Navi" required>
@@ -259,7 +259,7 @@
                           <div class="form-group">
                               <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                                   <div class="input-group-addon" style="width: 2.6rem">
-                                      <i class="fa fa-cog"></i>
+                                      <i class="fa fa-group"></i>
                                   </div>
                                   <input type="text" name="plaetze" class="form-control"
                                          id="plaetze" placeholder="2-7" required>
