sorry buddies. testen, ob checkbox=true und ref zum richtigen nutzer will nicht gehen. -> zu delete_user

--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -139,9 +139,7 @@
 
 
                 <div id="table_icon" style="cursor: pointer;">
-                  <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                  <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
-                  <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
+                  <a class="delete" title="Delete" onclick="deleteUser()" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
                 </div>
 
             </div>
@@ -176,6 +174,7 @@
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
     <script src="js/write_user_table.js"></script>
+    <script src="js/delete_user.js"></script>
 
     <script>
 
