--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
          <img class="mb-4" src="img/user_icon.png" alt="User" width="150" height="150">
        </div>
        <h1 class="h3 mb-3 font-weight-normal text-center">Login</h1>
-       <input type="text" id="email" class="form-control" placeholder="MitarbeiterID.." required autofocus>
+       <input type="email" id="email" class="form-control" placeholder="MitarbeiterID.." required autofocus>
        <input type="password" id="password" class="form-control" placeholder="Password.." required>
        <div class="checkbox mb-3">
          <label>
