--- a/web/user_rental_overview.html
+++ b/web/user_rental_overview.html
@@ -163,7 +163,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
-    <script src="js/user_write_order_table.js"></script>
+    <script src="js/write_order_table.js"></script>
 
 </body>
 
