--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -117,7 +117,7 @@
 
             <div class="container">
 
-            <table id="table"
+            <table id="car_table" class="car_table"
                  data-toggle="table"
                  data-search="true"
                  data-filter-control="true"
@@ -138,22 +138,6 @@
                 <th data-field="stellplatznummer" data-filter-control="select" data-sortable="true">Stellplatznummer</th>
           		</tr>
           	</thead>
-          	<tbody>
-          		<tr id="body">
-          			<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-
-             </tbody>
             </table>
 
                 <div id="table_icon" style="cursor: pointer;">
@@ -193,10 +177,9 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
-    
+
     <!-- Mit der Verlinkung auf die js kann die Autoübersicht aus der DB geholt werden -->
     <script src="js/write_carpool_table.js"></script>
-
 
 </body>
 
