--- a/web/admin_rental_overview.html
+++ b/web/admin_rental_overview.html
@@ -117,59 +117,34 @@
 
             <div class="container">
 
-            <table id="table"
-                 data-toggle="table"
-                 data-search="true"
-                 data-filter-control="true"
-                 data-click-to-select="true"
-                 data-toolbar="#toolbar">
-            <thead>
-              <tr>
-                <th data-field="state" data-checkbox="true"></th>
-          			<th data-field="prenom" data-filter-control="input" data-sortable="true">ID</th>
-          			<th data-field="date" data-filter-control="select" data-sortable="true">Fahrzeug</th>
-          			<th data-field="examen" data-filter-control="select" data-sortable="true">Abholdatum</th>
-          			<th data-field="note" data-sortable="true">Rückgabedatum</th>
-          		</tr>
-          	</thead>
-          	<tbody>
-          		<tr>
-          			<td class="bs-checkbox "><input data-index="0" name="btSelectItem" type="checkbox"></td>
-                <td>1</td>
-                <td>Seat Mii</td>
-                <td>10/01/2018</td>
-                <td>12/01/2018</td>
-              </tr>
-              <tr>
-                <td class="bs-checkbox "><input data-index="1" name="btSelectItem" type="checkbox"></td>
-                <td>2</td>
-                <td>Toyota Aygo</td>
-                <td>13/03/18</td>
-                <td>14/03/18</td>
-              </tr>
-              <tr>
-                <td class="bs-checkbox "><input data-index="2" name="btSelectItem" type="checkbox"></td>
-                <td>3</td>
-                <td>Audi A1</td>
-                <td>05/04/18</td>
-                <td>03/09/18</td>
-              </tr>
-              <tr>
-                <td class="bs-checkbox "><input data-index="3" name="btSelectItem" type="checkbox"></td>
-                <td>4</td>
-                <td>Elektro-Golf</td>
-                <td>07/09/18</td>
-                <td>10/10/18</td>
-              </tr>
-              <tr>
-                <td class="bs-checkbox "><input data-index="4" name="btSelectItem" type="checkbox"></td>
-                <td>5</td>
-                <td>Audi A3</td>
-                <td>17/10/18</td>
-                <td>01/02/2018</td>
-              </tr>
-             </tbody>
-            </table>
+              <table id="order_table" class="order_table"
+                   data-toggle="table"
+                   data-search="true"
+                   data-filter-control="true"
+                   data-click-to-select="true"
+                   data-toolbar="#toolbar">
+              <thead>
+                <tr>
+                  <th data-field="state" data-checkbox="true"></th>
+            			<th data-field="prenom" data-sortable="true">ID</th>
+                  <th data-field="abholdatum" data-sortable="true">Abholdatum</th>
+                  <th data-field="rueckgabedatum" data-sortable="true">Rückgabedatum</th>
+            			<th data-field="marke" data-sortable="true">Marke</th>
+            			<th data-field="modell" data-sortable="true">Modell</th>
+                  <th data-field="kraftstoff" data-sortable="true">Kraftstoff</th>
+            			<th data-field="schaltung" data-sortable="true">Schaltung</th>
+                  <th data-field="tueren" data-sortable="true">Türen</th>
+                  <th data-field="klima" data-sortable="true">Klima</th>
+                  <th data-field="navigationsgeraet" data-sortable="true">Navigationsgerät</th>
+                  <th data-field="raucherwagen" data-sortable="true">Raucherwagen</th>
+                  <th data-field="stellplatznummer" data-sortable="true">Stellplatznummer</th>
+            		</tr>
+            	</thead>
+              	<tbody id="order_table_body">
+
+
+               </tbody>
+              </table>
 
                 <div id="table_icon" style="cursor: pointer;">
                   <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
@@ -208,7 +183,7 @@
     <script src="js/scripts.js"></script>
     <script src="js/firebaseinit.js"></script>
     <script src="js/login.js"></script>
-
+    <script src="js/write_order_table.js"></script>
 
 </body>
 
