--- a/web/admin_user_all.html
+++ b/web/admin_user_all.html
@@ -138,9 +138,11 @@
             </table>
 
 
-                <div id="table_icon" style="cursor: pointer;">
-                  <a class="delete" title="Delete" onclick="deleteUser()" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
-                </div>
+            <div id="table_icon" style="cursor: pointer;">
+              <a class="edit" title="Edit" data-toggle="tooltip" onclick="editHtmlTbleSelectedRow();"><i class="material-icons">&#xE254;</i></a>
+              <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+              <a class="add" title="Add" data-toggle="tooltip" href="admin_carpool_new.html"><i class="material-icons">&#xE03B;</i></a>
+            </div>
 
             </div>
 
