--- a/web/admin_carpool_overview.html
+++ b/web/admin_carpool_overview.html
@@ -129,8 +129,8 @@
           			<th data-field="id" data-filter-control="input" data-sortable="true">ID</th>
           			<th data-field="marke" data-filter-control="select" data-sortable="true">Marke</th>
           			<th data-field="modell" data-filter-control="select" data-sortable="true">Modell</th>
-          			<th data-field="modell" data-filter-control="select" data-sortable="true">Kraftstoff</th>
-                <th data-field="kraftstoff" data-filter-control="select" data-sortable="true">Details</th>
+          			<th data-field="kraftstoff" data-filter-control="select" data-sortable="true">Kraftstoff</th>
+                <th data-field="details" data-filter-control="select" data-sortable="true">Details</th>
           		</tr>
           	</thead>
             </table>
