--- a/web/admin_rental_overview.html
+++ b/web/admin_rental_overview.html
@@ -126,18 +126,11 @@
               <thead>
                 <tr>
                   <th data-field="state" data-checkbox="true"></th>
-            			<th data-field="prenom" data-sortable="true">ID</th>
+            			<th data-field="orderid" data-sortable="true">AuftragsID</th>
                   <th data-field="abholdatum" data-sortable="true">Abholdatum</th>
                   <th data-field="rueckgabedatum" data-sortable="true">Rückgabedatum</th>
-            			<th data-field="marke" data-sortable="true">Marke</th>
-            			<th data-field="modell" data-sortable="true">Modell</th>
-                  <th data-field="kraftstoff" data-sortable="true">Kraftstoff</th>
-            			<th data-field="schaltung" data-sortable="true">Schaltung</th>
-                  <th data-field="tueren" data-sortable="true">Türen</th>
-                  <th data-field="klima" data-sortable="true">Klima</th>
-                  <th data-field="navigationsgeraet" data-sortable="true">Navigationsgerät</th>
-                  <th data-field="raucherwagen" data-sortable="true">Raucherwagen</th>
-                  <th data-field="stellplatznummer" data-sortable="true">Stellplatznummer</th>
+            			<th data-field="carid" data-sortable="true">AutoID</th>
+            			<th data-field="uid" data-sortable="true">NutzerID</th>
             		</tr>
             	</thead>
               	<tbody id="order_table_body">
