--- a/web/user_rental_new.html
+++ b/web/user_rental_new.html
@@ -68,7 +68,7 @@
 
         </nav>
 
-        <!-- Page Content  -->
+        <!-- Page Content.  -->
         <div id="content">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
